2.3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
  namespace: task23
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology
  template:
    metadata:
      labels:
        app: netology
    spec:
      containers:
      - name: busybox
        image: busybox:latest
        command: ['sh', '-c', 'i=0; while true; do echo test_logs$i >> /opt/test_logs.txt; i=$((i+1)); sleep 30; done']
      - name: multitool
        image: praqma/network-multitool:latest
        ports:
        - containerPort: 8080
          name: http-port
        volumeMounts:
          - name: custom-html-page
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: custom-html-page
        configMap:
          name: custom-html-page-configmap
