2.3/external_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-external
  namespace: task23
spec:
  ports:
    - name: multitool-http
      port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 30080
  type: NodePort
  selector:
    app: netology
