2.3/internal_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-internal
  namespace: task23
spec:
  ports:
    - name: multitool-http
      port: 8080
      targetPort: 8081
      protocol: TCP
  type: ClusterIP
  selector:
    app: netology
