2.3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: task23
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - my.ingress
    secretName: ingress-cert
  rules:
  - host: "my.ingress"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: netology-svc-external
              port:
                number: 8080
